2006-03-23  Darin Adler  <darin@apple.com>

        - test for http://bugzilla.opendarwin.org/show_bug.cgi?id=7726
          REGRESSION: orbitz calendar fails (JavaScript function serialization/parsing)

        * fast/js/resources/function-names.js: Added.
        * fast/js/function-names.html: Generated.
        * fast/js/function-names-expected.txt: Generated.

2006-03-23  Tim Omernick  <timo@apple.com>

        Reviewed by Darin.

        Layout test for:
        <http://bugzilla.opendarwin.org/show_bug.cgi?id=7691>

        * fast/forms/button-default-title-expected.checksum: Added.
        * fast/forms/button-default-title-expected.png: Added.
        * fast/forms/button-default-title-expected.txt: Added.
        * fast/forms/button-default-title.html: Added.

2006-03-23  Darin Adler  <darin@apple.com>

        - removed merge artifacts from .checksum files

        * fast/block/float/vertical-move-relayout-expected.checksum:
        * fast/css/first-letter-detach-expected.checksum:
        * fast/css/hover-subselector-expected.checksum:
        * fast/dom/Element/class-attribute-whitespace-expected.checksum:
        * fast/events/event-sender-mouse-moved-expected.checksum:
        * fast/forms/form-hides-table-expected.checksum:
        * fast/invalid/missing-address-end-tag-expected.checksum:
        * fast/invalid/missing-dl-end-tag-expected.checksum:
        * fast/invalid/missing-dt-end-tag-expected.checksum:
        * fast/invalid/missing-font-end-tag-expected.checksum:
        * fast/text/in-rendered-text-rtl-expected.checksum:
        * fast/tokenizer/missing-title-end-tag-1-expected.checksum:
        * fast/tokenizer/missing-title-end-tag-2-expected.checksum:

2006-03-23  Darin Adler  <darin@apple.com>

        Reviewed by Beth.

        - test for <rdar://problem/4335038> REGRESSION: when max-height is none, height value is ignored

        * fast/css/max-height-none-expected.checksum: Added.
        * fast/css/max-height-none-expected.txt: Added.