@@ -1,0 +1,12 @@
+layer at (0,0) size 800x600
+  RenderCanvas at (0,0) size 800x600
+layer at (0,0) size 800x600
+  RenderBlock {HTML} at (0,0) size 800x600
+    RenderBody {BODY} at (8,8) size 784x584
+      RenderBlock {P} at (0,0) size 784x18
+        RenderText {TEXT} at (0,0) size 640x18
+          text run at (0,0) width 640: "Test of createContextualFragment. If the test succeeds you will see the word \"success\" below in bold."
+      RenderBlock {DIV} at (0,34) size 784x18
+        RenderInline {B} at (0,0) size 74x18
+          RenderText {TEXT} at (0,0) size 74x18
+            text run at (0,0) width 74: "SUCCESS"
