@@ -1,3 +1,15 @@
+2006-03-24  Darin Adler  <darin@apple.com>
+
+        Reviewed by Dave Harrison.
+
+        - test for http://bugzilla.opendarwin.org/show_bug.cgi?id=7942
+          nightlies after r13387 break js createcontextualfragment
+
+        * fast/dom/Range/create-contextual-fragment-expected.checksum: Added.
+        * fast/dom/Range/create-contextual-fragment-expected.png: Added.
+        * fast/dom/Range/create-contextual-fragment-expected.txt: Added.
+        * fast/dom/Range/create-contextual-fragment.html: Added.
+
 2006-03-23  Darin Adler  <darin@apple.com>
 
         - test for http://bugzilla.opendarwin.org/show_bug.cgi?id=7726
